# diversity

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
.github/workflows/: publish.yaml
diversity/: CompressionRatio.py  __init__.py  compression.py  compression_ratio.py  compute_all_metrics.py  eigen_auc.py  embedding.py  embedding_metrics.py  functions.py  hom_tests.py  homogenization.py  ngram_diversity.py  qudsim.py  self_repetition.py  template.py
diversity/patterns/: POS.py  Token.py  __init__.py  part_of_speech.py  pos_patterns.py  token_patterns.py
diversity/qudsim_alignment/: __init__.py  align.py  answer.py  metric.py  similarity.py
diversity/qudsim_modules/: __init__.py
diversity/qudsim_modules/qudsim_alignment/: answer.py  metric.py  similarity.py
diversity/qudsim_modules/qudsim_preprocessing/: number.py
diversity/qudsim_modules/qudsim_qud_generation/: decontextualize.py  pipeline.py  qud.py  segment.py
diversity/qudsim_preprocessing/: __init__.py  number.py
diversity/qudsim_qud_generation/: __init__.py  decontextualize.py  pipeline.py  qud.py  segment.py
diversity/utils/: __init__.py  memoize.py  openai.py
examples/: summarization.py
scripts/: timing.py
synthetic_datasets/: dataset_1.txt  dataset_2.txt  dataset_3.txt  dataset_4.txt  dataset_5.txt  timing_experiments_results.csv
test-diversity/: hom_tests.py
tests/: part_of_speech_test.py  token_patterns_test.py
