[tool.poetry]
name = "diversity"
version = "0.1.5"
description = ""
authors = ["Chantal Shaib <shaib.c@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
