[tool.poetry]
name = "diversity"
version = "0.2.0"
description = ""
authors = ["Chantal Shaib <shaib.c@northeastern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
typer = "^0.9.0"
nltk = "^3.8.1"
rouge-score = "^0.1.2"
evaluate = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pandas = "^2.1.2"
numpy = "^1.26.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
